# RikerBot

./: .clang-format  .gitignore  .style.yapf  .travis.yml  CMakeLists.txt  Contributors  License  MANIFEST.in  ReadMe.rst  generate.py  setup.py
.github/workflows/: main.yml
cmake/: Event.cmake  Exec.cmake  FindBotan2.cmake  IO.cmake  Logger.cmake  PluginLoader.cmake  Proto.cmake  Status.cmake  Timer.cmake  World.cmake
docs/: conf.py  contributing.rst  index.rst  installation.rst
example/: ExamplePlugin.py
include/: aabb.hpp  byteswap.hpp  datautils.hpp  event_core.hpp  exec_core.hpp  io_core.hpp  logger.hpp  nbt.hpp  plugin_base.hpp  plugin_loader.hpp  signal.hpp  smpmap.hpp  start_plugin.hpp  status_core.hpp  timer_core.hpp  vec3.hpp  world_core.hpp
mcd2cpp/: __init__.py  blocks.py  particles.py  protocol.py  shapes.py
riker/: DependencySolver.py  EventPlugin.py  IOPlugin.py  PluginBase.py  StartPlugin.py  __init__.py
riker/plugins/: AuthPlugin.py  StartPlugin.py
riker/proto/: __init__.py  yggdrasil.py
rikerbot/: DependencySolver.py  PluginBase.py  PluginLoader.py  SimpleClient.py  __init__.py
rikerbot/plugins/: AuthPlugin.py  CPlugins.py  EventPlugin.py  ExecPlugin.py  IOPlugin.py  KeepAlive.py  StartPlugin.py  StatusPlugin.py  WorldPlugin.py
rikerbot/proto/: yggdrasil.py
scripts/: linux-build.sh
src/: datautils.cpp  event_core.cpp  exec_core.cpp  io_core.cpp  logger.cpp  plugin_base.cpp  plugin_loader.cpp  signal.cpp  smpmap.cpp  start_plugin.cpp  status_core.cpp  timer_core.cpp  world_core.cpp
swig/: EventCore.i  ExecCore.i  IOCore.i  Logger.i  PluginLoader.i  StartPlugin.i  StatusCore.i  TimerCore.i  WorldCore.i
